# MultiScaleOT

./: README.md
doc/source/: conf.py  index.rst
doc/source/auto_examples/: plot_multiscale-setup.ipynb  plot_multiscale-setup.py  plot_multiscale-setup.py.md5  plot_multiscale-setup_codeobj.pickle
docs/: index.html  installation.html  objects.inv  reference_multiscale.html  reference_solver_aux.html  reference_solver_barycenter.html  reference_solver_unbalanced.html  search.html  searchindex.js
docs/_sources/: reference.rst.txt  reference_solver_barycenter.rst.txt
docs/_sources/auto_examples/: index.rst.txt  sg_execution_times.rst.txt
docs/auto_examples/: sg_execution_times.html
examples/results/: .keep
src/: CMakeLists.txt  Common.h
src/Common/: CMakeLists.txt  GridTools.cpp  GridTools.h  MultiScaleTools.cpp  MultiScaleTools.h  TEpsScaling.cpp  TEpsScaling.h  THierarchicalCostFunctionProvider.cpp  THierarchicalCostFunctionProvider.h  THierarchicalPartition.cpp  THierarchicalPartition.h  THierarchyBuilder.cpp  THierarchyBuilder.h  Tools.cpp  Tools.h  Verbose.cpp  Verbose.h
src/Common/Models/: CMakeLists.txt  Geometry_Sphere.cpp  Geometry_Sphere.h  HK.cpp  HK.h  OT.cpp  OT.h  TGeometry.h  WFR.cpp  WFR.h
src/Examples/: CMakeLists.txt  Dense_LP.cpp  ReflectorSpherical_CPLEX.cpp  ReflectorSpherical_Sinkhorn.cpp  ShortCut.cpp  Sinkhorn_Barycenter.cpp  Sinkhorn_Standard.cpp
src/ShortCutSolver/: MultiScaleSolver.h
src/Sinkhorn/: TSinkhornKernel.cpp  TSinkhornKernel.h  TSinkhornSolver.cpp  TSinkhornSolver.h  TSinkhornSolverBarycenter.cpp  TSinkhornSolverBarycenter.h
src/pybind11_interface/: CMakeLists.txt  MultiScaleOT_pybind11_interface.cpp  MultiScaleOT_pybind11_interface_base.cpp  MultiScaleOT_pybind11_interface_common.cpp  MultiScaleOT_pybind11_interface_common.h  MultiScaleOT_pybind11_interface_cplex.cpp  MultiScaleOT_pybind11_interface_sinkhorn.cpp
